--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-hello world
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset='utf-8'>
+		<link href='./style.css'>
+		<title>MYWEB</title>
+	</head>
+	<body>
+		<nav id='nav-title'>
+			<h1>this <span>is</span> myweb</h1>
+		</nav>
+		<div class="contain">
+			HELLO WORLD!
+		</div>
+	</body>
+</html>
