--- a/index.html
+++ b/index.html
@@ -14,3 +14,11 @@
 		</div>
 	</body>
 </html>
+<script>
+	alert('Hello world!');
+	function getInfo(){
+		for(var i=0;i<10;i++){
+			console.log(i);
+		}	
+	}
+</script>
